--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.2.5",
     "@types/mysql": "^2.15.21",
+    "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
-    "ts-auto-mock": "^3.6.4"
+    "ts-auto-mock": "^3.6.4",
+    "ts-jest": "^29.0.5"
   }
 }
