--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "mysql2": "^3.0.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -21,7 +20,10 @@
     "@types/mysql": "^2.15.21",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
+    "jest-ts-auto-mock": "^2.1.0",
     "ts-auto-mock": "^3.6.4",
-    "ts-jest": "^29.0.5"
+    "ts-jest": "^29.0.5",
+    "ttypescript": "^1.5.15",
+    "typescript": "^4.9.4"
   }
 }
