--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "mysql2": "^3.0.1",
+    "prompt-sync": "^4.2.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
     "@types/jest": "^29.2.5",
     "@types/mysql": "^2.15.21",
+    "@types/prompt-sync": "^4.2.0",
     "babel-jest": "^29.3.1",
     "jest": "^29.3.1",
     "jest-ts-auto-mock": "^2.1.0",
